--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "lodash": "^4.17.21"
+    "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.3.5",
+    "passport": "^0.6.0",
+    "passport-steam": "^1.0.17"
   }
 }
